# docs/swagger.json
@@ -3,44 +3,19 @@
     "info": {
         "contact": {}
     },
-    "basePath": "/v1",
     "paths": {
         "/": {
             "get": {
-                "description": "Get application version, current date (UNIX epoch), and Kubernetes status.",
+                "description": "Get information about the application, including its version, date, and Kubernetes status",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get root information",
-                "operationId": "get-root",
+                "summary": "Get information about the application",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/main.RootResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/example/helloworld": {
-            "get": {
-                "description": "do ping",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "example"
-                ],
-                "summary": "self implemenetation ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 }
